[workspace]
members = [
    'node',
    'pallets/template',
    'runtime',
]
[profile.release]
panic = 'unwind'

[patch.crates-io]
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-service = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-api = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-core = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-io = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-runtime = {  git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-timestamp = {  git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
substrate-frame-rpc-system = {  git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
frame-support = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
frame-system = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-version = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-std = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-session = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
frame-executive = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }
pallet-nicks = { git = 'https://github.com/paritytech/substrate.git',  tag = 'monthly-2021-07' }

